# korean-gongbu-frontend

./: .gitignore  .prettierrc.json  README.md  docker-compose.yml  package.json
backend/: .env  .env.dev  Cargo.toml  Makefile  rustfmt.toml
backend/migrations/2020-08-03-021105_create_users/: up.sql
backend/migrations/2021-02-07-223551_create_grammar_examples/: down.sql  up.sql
backend/src/: errors.rs  main.rs  routes.rs  schema.rs
backend/src/db/: grammar.rs  mod.rs  user.rs
backend/src/handlers/: mod.rs  status.rs  status_handler.rs  user_handler.rs
backend/src/handlers/v1/: grammar_handler.rs  mod.rs  status_handler.rs  user_handler.rs
backend/src/handlers/v1/src/: schema.rs
backend/src/models/: app_config.rs  mod.rs  user.rs
backend/src/models/v1/: app.rs  grammar.rs  mod.rs  user.rs
backend/src/models/v1/requests/: grammar.rs  mod.rs
backend/src/models/v1/responses/: api.rs
backend/src/routes/v1/: grammar_routes.rs  mod.rs  status_routes.rs  user_routes.rs
data/: krgrammar.json
frontend/: .dockerignore  .prettierignore  Dockerfile  package-lock.json  package.json  rollup.config.js  tsconfig.json
frontend/korean_nums_wasm/: Cargo.toml
frontend/korean_nums_wasm/src/: lib.rs
frontend/src/: App.svelte
frontend/src/pages/: index.svelte
frontend/src/pages/tools/: num-hangeul.svelte
frontend/static/: __index.html
scripts/: ingest-krgrammar.rb
