[package]
name = "korean_gongbu"
version = "0.1.0"
authors = ["Andrew Zah <zah@andrewzah.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
http = "0.2"
warp = "0.2"
tokio = { version = "0.2", features = ["full"] }
