[package]
name = "korean_gongbu"
version = "0.1.0"
authors = ["Andrew Zah <zah@andrewzah.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
http = "0.2"
lazy_static = "1.4"
thiserror = "1.0"
r2d2 = "0.8"
serde = { version = "1.0" }
serde_derive = "1.0.106"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2"
warp = "0.2"